Trying to fix pill buttons on mobile.

--- a/less/content.less
+++ b/less/content.less
@@ -297,13 +297,13 @@
 			.pill-button {
 				display: block;
 				float: left;
-				font-size: 20px;
+				font-size: 21px;
 				text-transform: uppercase;
 				color: white;
 				#gradient > .vertical(#683090; #939);
 				font-weight: 700;
 				letter-spacing: 3px;
-				padding: 6px 22px 4px;
+				padding: 6px 15px 4px;
 				.border-radius(50px);
 				text-decoration: none;
 
@@ -415,6 +415,7 @@
 
 				.pill-button {
 					font-size: 26px;
+					padding: 6px 22px 4px;
 
 					.icon.arrow-right {
 						margin: 7px 0 0 10px;
